--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,18 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100%;
+    top: 0;
+    left: 0;
+}
 
 
-
-
+header {
+    position: fixed;
+    width: 100%;
+    height: 48px;
+}
 
 
 .barremenu1 {
@@ -88,4 +96,9 @@ i {
 .select {
     color: white;
     border-bottom: solid 4px white;
+}
+
+section {
+    width: 60%;
+
 }
