--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 
 
 header {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 48px;
 }
@@ -22,7 +22,7 @@ header {
     width: 100%;
     height: 48px;
     background-color: black;
-
+    position: fixed;
 }
 
 .logo {
@@ -101,10 +101,10 @@ i {
 
 section {
     width: 60%;
-    height: 500px;
+    height: 600px;
     margin-left: 50px;
     position: relative;
-    top: 100px;
+    top: 90px;
     border: solid 1px blueviolet;
 }
 
@@ -117,7 +117,7 @@ section a {
 .art1 {
     margin-top: 15px;
     width: 60%;
-    height: 60%;
+    height: 45%;
     background-image: url(../img/Capture.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -146,4 +146,47 @@ section a {
     font-size: 0.8em;
     margin-left: 5px;
     color: #6b6b6b;
+}
+
+.art2 {
+    margin-top: 30px;
+    width: 60%;
+    height: 45%;
+    background-image: url(../img/Capture2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contenu2 {
+    margin-left: 100%;
+    width: 60%;
+    height: 150px;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.contenu2 h1 {
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.contenu2 h6 {
+    color: #6b6b6b;
+}
+
+
+.contenu2 p {
+    display: inline;
+    font-size: 0.8em;
+    margin-left: 5px;
+    color: #6b6b6b;
+}
+
+aside {
+    width: 35%;
+    height: 600px;
+    border: solid 1px black;
+    float: right;
+    margin-top: 90px;
+
 }
