--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,14 @@ section {
     top: 90px;
 }
 
+section h1 {
+    font-size: xx-large;
+}
+
+section h2 {
+    margin-top: 20px;
+}
+
 section a {
     text-decoration-line: none;
     color: black;
@@ -115,8 +123,8 @@ section a {
 
 .art1 {
     margin-top: 15px;
-    width: 60%;
-    height: 430px;
+    width: 600px;
+    height: 350px;
     background-image: url(../img/Capture.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -149,8 +157,8 @@ section a {
 
 .art2 {
     margin-top: 30px;
-    width: 60%;
-    height: 430px;
+    width: 600px;
+    height: 350px;
     background-image: url(../img/Capture2.png);
     background-repeat: no-repeat;
     background-size: cover;
